# NovaMind

./: README.md  __init__.py  api.py  install_training.py  pyproject.toml  requirements_training.txt
core/: __init__.py  agent.py  api_permissions.py  config.py  distributed.py  environment.py  grpc_service.py  knowledge.py  memory.py  models.py  monitor.py  multimodal.py  scheduler.py  security.py  tools.py
datagen/: __init__.py  base.py  examples.py  llm.py
downloads/: deepseek_download.md  download_huugging.py  ernie_download.md  glm_download.md  huggingface_download.py  llama_download.md  minimax_download.md  openai_download.md  qwen_download.md  yichat_download.md
examples/: anthropic_chat.py  basic_agent.py  data_generation.py  deepseek_chat.py  ernie_chat.py  glm_chat.py  llama_chat.py  minimax_chat.py  openai_chat.py  qwen_chat.py  text_summarization.py  yichat_chat.py
frontend/src/: App.js
frontend/src/components/Auth/: PermissionGuard.js
frontend/src/contexts/: PermissionContext.js
frontend/src/pages/Users/: Users.js
mcp/: __init__.py  information_extractor.py  qa_tool.py  text2code.py  text_summarizer.py  web_search_tool.py
models/: openai.py
neo4j/: pdf_to_neo4j.py
storages/: __init__.py  base.py  json.py  memory.py
tests/: test_agent.py  test_api.py
tools/: web_search.py
train/: deepseek_train.py  qwen_train.py
train/optim_tools/: grad_accum_clip.py  grad_checkpoint.py  mixed_precision.py
training/: __init__.py  advantages_demo.py  config.py  example.py  llm_trainer.py  monitor.py  quick_start.py  trainer.py
